@startuml
entity User {
    {static} id : ULID : PK
    username: String
    password: Hashed
}
entity Project {
    {static} id: ULID : PK
    name: String
    sleep_seconds_between_page_scrape: Integer
    ignore_scrape_failures: Boolean
    {static} user_id: ULID : FK
}
entity PageTemplate {
    {static} id: ULID : PK
    name: String
    output_type: Enum[PAGE_SOURCE, LEAF]
    scraper: Enum[XPATH_SELECTOR, AI_SCRAPER]
    example_url: String
    ai_prompt: String
    ai_input: Enum[HTML, TEXT]
    {static} output_page_template_id: ULID : FK
    {static} project_id: ULID : FK
}
entity ScrapeRule {
    {static} id: ULID : PK
    alias: String
    type: Enum[SINGLE, MULTI]
    value: String
    {static} page_template_id: ULID : FK
}
entity SeedPage {
    {static} id: ULID : PK
    url: String
    {static} page_template_id: ULID : FK
    {static} project_id: ULID : FK
}
entity ScrapeRun {
    {static} id: ULID : PK
    started_on: Epoch
    ended_on: Epoch
    status: Enum[STARTED, COMPLETED, FAILED]
    {static} project_id: ULID : FK
}
entity ScrapeRunPage {
    {static} id: ULID : PK
    url: String
    scrape_output: JSON
    status: Enum[STARTED, COMPLETED, FAILED]
    output_type: Enum[PAGE_SOURCE, LEAF]
    {static} page_template_id: ULID : FK
    {static} scrape_run_id: ULID : FK
}
entity ScrapeRunOutput {
    {static} id: ULID : PK
    format: Enum[JSONL, CSV, XLSX]
    file_url: String
    {static} scrape_run_id: ULID : FK
}

User "1" -right-> "N" Project
Project "1" -down-> "N" PageTemplate
Project "1" -right-> "N" SeedPage
SeedPage "1" -down-> "1" PageTemplate
PageTemplate "1" --> "N" ScrapeRule
Project "1" --> "N" ScrapeRun
ScrapeRun "1" --> "N" ScrapeRunPage
ScrapeRun "1" --> "N" ScrapeRunOutput

hide User methods
hide Project methods
hide PageTemplate methods
hide SeedPage methods
hide ScrapeRule methods
hide ScrapeRun methods
hide ScrapeRunPage methods
hide ScrapeRunOutput methods

note as N1
    ULID = Universally unique 
    lexicographically sortable identifier
    PK = Primary key
    FK = Foreign key
    Hashed = Argon2 hashing
end note

@enduml